feat: adiciona a lógica de alterar as imagens e a quantidade do carrinho

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <input type="text" placeholder="Pesquisar" />
             <div class="user-info">
                 <span><img class="cart" src="shop.png" alt="Carrinho de compras" /></span>
-                <span>0</span>
+                <span id="qtd-cart">0</span>
             </div>
         </nav>
     </header>
@@ -50,13 +50,13 @@
             </div>
             <section class="thumbnail">
                 <div class="box-products">
-                    <img src="vhs1.png" alt="Thumbnail Fita VHS 1" width="44" height="77" />
+                    <img id="back-image" src="vhs1.png" alt="Thumbnail Fita VHS 1" width="44" height="77" />
                 </div>
                 <div class="box-products">
-                    <img src="vhs2.png" alt="Thumbnail Fita VHS 2" width="21" height="76" />
+                    <img id="left-image" src="vhs2.png" alt="Thumbnail Fita VHS 2" width="21" height="76" />
                 </div>
                 <div class="box-products">
-                    <img src="vhs3.png" alt="Thumbnail Fita VHS 3" width="22" height="75" />
+                    <img id="right-image" src="vhs3.png" alt="Thumbnail Fita VHS 3" width="22" height="75" />
                 </div>
             </section>
         </section>
@@ -64,6 +64,6 @@
     <footer>
         <p>&copy; 2024 OLD SHOP. Todos os direitos reservados.</p>
     </footer>
-    <script src="script.js" defer></script>
+    <script src="index.js" defer></script>
 </body>
 </html>
